--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .gradle
-/build/
+build/
+logs/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -12,3 +13,9 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+.idea/
+temp-clone/
+
+# For mkdoc
+site/
+docs/index.md
