--- a/corda-testacles/build.gradle
+++ b/corda-testacles/build.gradle
@@ -16,9 +16,19 @@ dependencies {
     //implementation "org.testcontainers:junit-jupiter:1.15.0-rc1"
     //compile("com.github.manosbatsis.kotlin-utils:kotlin-utils-api:$kotlinutils_version")
     //compile("com.github.manosbatsis.corda.rpc.poolboy:corda-rpc-poolboy:$poolboy_version")
-    testImplementation(
-            implementation("com.github.manosbatsis.corbeans:corbeans-spring-boot-starter:$corbeans_version"))
-    testImplementation "org.springframework:spring-test:$spring_version"
+    testImplementation("org.springframework.boot:spring-boot-starter:$spring_boot_version") {
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
+    testImplementation("org.springframework.boot:spring-boot-starter-validation:$spring_boot_version") {
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
+    testImplementation("org.springframework.boot:spring-boot-starter-web:$spring_boot_version") {
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
+    testImplementation("org.springframework.boot:spring-boot-starter-actuator:$spring_boot_version"){
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
+    testImplementation("com.github.manosbatsis.corbeans:corbeans-spring-boot-starter:$corbeans_version")
     testImplementation "org.springframework:spring-test:$spring_version"
     testImplementation("org.springframework.boot:spring-boot-starter-test:$spring_boot_version") {
         exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
