--- a/corda-testacles-cordapp-example/build.gradle
+++ b/corda-testacles-cordapp-example/build.gradle
@@ -7,58 +7,22 @@ cordapp {
     targetPlatformVersion 4
     minimumPlatformVersion 3
     contract {
-        // TODO: Update with your own
-        name "Corbeans Yo! Cordapp"
+        name "Corbeans Yo! Cordapp contract"
         vendor "Manos Batsis"
         versionId 1
         targetPlatformVersion corda_platform_version.toInteger()
         minimumPlatformVersion corda_platform_version.toInteger()
     }
 }
-dependencies {
 
-//    cordapp project(":partiture-example-contract")
+dependencies {
+    // Use Partiture for Corda flows etc.
+    cordaCompile "com.github.manosbatsis.partiture:partiture:$partiture_version"
     // Corda deps
     cordaCompile "$corda_release_group:corda-core:$corda_release_version"
     cordaCompile "$corda_release_group:corda-jackson:$corda_release_version"
     cordaCompile "$corda_release_group:corda-rpc:$corda_release_version"
     cordaRuntime "$corda_release_group:corda:$corda_release_version"
-    // Use Partiture for corda flows etc.
-    cordapp "com.github.manosbatsis.partiture:partiture:$partiture_version"
-    
+    // Corda Node Driver etc. for tests
     testImplementation ("$corda_release_group:corda-node-driver:$corda_release_version")
-}
-
-task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
-    directory "./build/nodes"
-    nodeDefaults {
-        cordapp "com.github.manosbatsis.partiture:partiture:$partiture_version"
-        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
-    }
-    node {
-        name "O=Notary,L=London,C=GB"
-        notary = [validating : false]
-        p2pPort 10002
-        rpcSettings {
-            address("localhost:10003")
-            adminAddress("localhost:10043")
-        }
-        cordapps = []
-    }
-    node {
-        name "O=PartyA,L=London,C=GB"
-        p2pPort 10005
-        rpcSettings {
-            address("localhost:10006")
-            adminAddress("localhost:10046")
-        }
-    }
-    node {
-        name "O=PartyB,L=New York,C=US"
-        p2pPort 10008
-        rpcSettings {
-            address("localhost:10009")
-            adminAddress("localhost:10049")
-        }
-    }
 }
