--- a/corda-testacles/build.gradle
+++ b/corda-testacles/build.gradle
@@ -10,13 +10,8 @@ dependencies {
 
     implementation "$corda_release_group:corda-node:$corda_release_version"
     implementation "$corda_release_group:corda-node-driver:$corda_release_version"
-    //implementation "$corda_release_group:corda-core:$corda_release_version"
-    //implementation "$corda_release_group:corda:$corda_release_version"
 
-
-    //implementation "org.testcontainers:junit-jupiter:1.15.0-rc1"
-    //compile("com.github.manosbatsis.kotlin-utils:kotlin-utils-api:$kotlinutils_version")
-    //compile("com.github.manosbatsis.corda.rpc.poolboy:corda-rpc-poolboy:$poolboy_version")
+    testCompile(project(":corda-testacles-cordapp-example"))
     testImplementation("org.springframework.boot:spring-boot-starter:$spring_boot_version") {
         exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
     }
