--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,10 +43,9 @@ markdown_extensions:
 
 nav:
   - 'Overview': index.md
-  - 'Installation': installation.md
   - 'Testcontainers':
     - 'Overview': testcontainers/overview.md
-    - 'Cordform Network ': core/cordform-network.md
+    - 'Cordform Network': testcontainers/cordform-network.md
   - 'API Reference': /corda-testacles/0.x/index.html
   - 'FAQ': faq.md
   - 'Change Log': changelog.md
