--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,6 @@ nav:
   - 'Testcontainers':
     - 'Overview': testcontainers/overview.md
     - 'Cordform Network': testcontainers/cordform-network.md
-  - 'API Reference': /corda-testacles/0.x/index.html
+#  - 'API Reference': /corda-testacles/0.x/index.html
   - 'FAQ': faq.md
   - 'Change Log': changelog.md
