--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,9 +43,10 @@ markdown_extensions:
 
 nav:
   - 'Overview': index.md
+  - 'Node Driver': node-driver.md
   - 'Testcontainers':
     - 'Overview': testcontainers/overview.md
-    - 'Cordform Network': testcontainers/cordform-network.md
+    - 'Cordform Networks': testcontainers/cordform-networks.md
 #  - 'API Reference': /corda-testacles/0.x/index.html
   - 'FAQ': faq.md
   - 'Change Log': changelog.md
