--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'corda-testacles-parent'
 
-include 'corda-testacles-testcontainers',
+include 'corda-testacles-nodedriver',
+        'corda-testacles-testcontainers',
         'corda-testacles-processor',
         'corda-testacles-model',
         'corda-testacles-model-api',
