--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,7 @@ nav:
     - 'Test Helper': nodedriver/nodedriver-helper.md
   - 'Testcontainers':
     - 'Overview': testcontainers/index.md
-    - 'Cordform Networks': testcontainers/cordform-networks.md
+    - 'Cordform Containers': testcontainers/cordform-networks.md
 #  - 'API Reference': /corda-testacles/0.x/index.html
   - 'FAQ': faq.md
   - 'Change Log': changelog.md
