--- a/corda-testacles-model-api/build.gradle
+++ b/corda-testacles-model-api/build.gradle
@@ -1,8 +1,9 @@
 
+apply plugin: 'java-library'
 
 dependencies {
 
-    api "$corda_release_group:corda-core:$corda_release_version"
-    api "org.junit.jupiter:junit-jupiter-api:$junit_jupiter_version"
     api("com.github.manosbatsis.kotlin-utils:kotlin-utils-api:$kotlinutils_version")
+    implementation "$corda_release_group:corda-core:$corda_release_version"
+    implementation "org.junit.jupiter:junit-jupiter-api:$junit_jupiter_version"
 }
