--- a/build.gradle
+++ b/build.gradle
@@ -191,8 +191,8 @@ subprojects {
         }
     }
     dependencies {
-        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-        implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
+        implementation("org.jetbrains.kotlin:kotlin-reflect:$kotlin_version")
 
         testImplementation("org.jetbrains.kotlin:kotlin-test:$kotlin_version")
 
@@ -212,11 +212,7 @@ subprojects {
     }
 }
 
-configure([project('corda-testacles-model'),
-           project('corda-testacles-model-api'),
-           project('corda-testacles-processor'),
-           project('corda-testacles-testcontainers'),
-           project('corda-testacles-thirdparty-clone')]) {
+configure(subprojects.findAll {!it.name.contains('example')}) {
 
     apply plugin: 'org.jetbrains.dokka'
     apply plugin: 'maven'
