--- a/corda-testacles-cordapp-example/build.gradle
+++ b/corda-testacles-cordapp-example/build.gradle
@@ -3,6 +3,10 @@ apply plugin: 'net.corda.plugins.cordapp'
 apply plugin: 'net.corda.plugins.cordformation'
 apply plugin: 'net.corda.plugins.quasar-utils'
 
+project.afterEvaluate {
+    check.dependsOn(":deployNodes")
+}
+
 cordapp {
     targetPlatformVersion 4
     minimumPlatformVersion 3
@@ -23,6 +27,29 @@ dependencies {
     cordaCompile "$corda_release_group:corda-jackson:$corda_release_version"
     cordaCompile "$corda_release_group:corda-rpc:$corda_release_version"
     cordaRuntime "$corda_release_group:corda:$corda_release_version"
+
+    testCompile(project(":corda-testacles-nodedriver"))
+    testCompile(project(":corda-testacles-testcontainers"))
+    //compile("com.github.manosbatsis.corda.rpc.poolboy:corda-rpc-poolboy:$poolboy_version")
+
     // Corda Node Driver etc. for tests
     testImplementation ("$corda_release_group:corda-node-driver:$corda_release_version")
+
+    testImplementation("org.springframework.boot:spring-boot-starter:$spring_boot_version") {
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
+    testImplementation("org.springframework.boot:spring-boot-starter-validation:$spring_boot_version") {
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
+    testImplementation("org.springframework.boot:spring-boot-starter-web:$spring_boot_version") {
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
+    testImplementation("org.springframework.boot:spring-boot-starter-actuator:$spring_boot_version"){
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
+    testImplementation("com.github.manosbatsis.corbeans:corbeans-spring-boot-starter:$corbeans_version")
+    testImplementation "org.springframework:spring-test:$spring_version"
+    testImplementation("org.springframework.boot:spring-boot-starter-test:$spring_boot_version") {
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
 }
