--- a/corda-testacles-model/build.gradle
+++ b/corda-testacles-model/build.gradle
@@ -1,5 +1,5 @@
 
-apply plugin: 'java-library'
+//apply plugin: 'java-library'
 apply plugin: 'kotlin-allopen'
 apply plugin: 'kotlin-kapt'
 
@@ -20,20 +20,21 @@ idea {
 
 dependencies {
 
-    api project(':corda-testacles-thirdparty-clone')
-    api project(':corda-testacles-model-api')
-    kapt project(':corda-testacles-processor')
+    compile(project(':corda-testacles-thirdparty-clone'))
+    compile(project(':corda-testacles-model-api'))
+    kapt(project(':corda-testacles-processor'))
 
-    api("com.github.manosbatsis.kotlin-utils:kotlin-utils-api:$kotlinutils_version")
+    compile("com.github.manosbatsis.kotlin-utils:kotlin-utils-api:$kotlinutils_version")
     kapt("com.github.manosbatsis.kotlin-utils:kotlin-utils-kapt:$kotlinutils_version")
+    compile("io.github.juanchosaravia.autodsl:annotation:$autodsl_version")
+    kapt("io.github.juanchosaravia.autodsl:processor:$autodsl_version")
 
-    implementation("$corda_release_group:corda-node-driver:$corda_release_version")
-    implementation "$corda_release_group:corda-core:$corda_release_version"
-    implementation "$corda_release_group:corda:$corda_release_version"
+    //runtime("$corda_release_group:corda-node-driver:$corda_release_version")
+    implementation("$corda_release_group:corda-node-api:$corda_release_version")
+    implementation("$corda_release_group:corda-core:$corda_release_version")
+    //runtime("$corda_release_group:corda:$corda_release_version")
 
 
     //compile("com.github.manosbatsis.corda.rpc.poolboy:corda-rpc-poolboy:$poolboy_version")
-    api "io.github.juanchosaravia.autodsl:annotation:$autodsl_version"
-    kapt "io.github.juanchosaravia.autodsl:processor:$autodsl_version"
 
 }
