--- a/corda-testacles-processor/build.gradle
+++ b/corda-testacles-processor/build.gradle
@@ -20,17 +20,17 @@ idea {
 
 dependencies {
 
-    api project(':corda-testacles-model-api')
+    compile(project(':corda-testacles-model-api'))
 
-    implementation "$corda_release_group:corda-core:$corda_release_version"
-    implementation "$corda_release_group:corda:$corda_release_version"
+    implementation("$corda_release_group:corda-core:$corda_release_version")
+    runtime("$corda_release_group:corda:$corda_release_version")
 
-    implementation "$corda_release_group:corda-core:$corda_release_version"
-    implementation "$corda_release_group:corda:$corda_release_version"
+    implementation("$corda_release_group:corda-core:$corda_release_version")
+    runtime("$corda_release_group:corda:$corda_release_version")
 
-    api "com.squareup:kotlinpoet:$kotlinpoet_version"
-    api("com.github.manosbatsis.kotlin-utils:kotlin-utils-api:$kotlinutils_version")
-    api("com.github.manosbatsis.kotlin-utils:kotlin-utils-kapt:$kotlinutils_version")
+    compile("com.squareup:kotlinpoet:$kotlinpoet_version")
+    compile("com.github.manosbatsis.kotlin-utils:kotlin-utils-api:$kotlinutils_version")
+    compile("com.github.manosbatsis.kotlin-utils:kotlin-utils-kapt:$kotlinutils_version")
 
 //@Builder
     compile 'com.thinkinglogic.builder:kotlin-builder-annotation:1.2.0'
