--- a/corda-testacles-thirdparty-clone/build.gradle
+++ b/corda-testacles-thirdparty-clone/build.gradle
@@ -1,5 +1,5 @@
 
-apply plugin: 'java-library'
+//apply plugin: 'java-library'
 apply plugin: 'kotlin-allopen'
 apply plugin: 'kotlin-kapt'
 
@@ -11,10 +11,10 @@ dependencies {
 
     cloneCorda ("$corda_release_group:corda-node:$corda_release_version:sources")
     cloneTestcontainers ( "org.testcontainers:junit-jupiter:$testcontainers_junit_jupiter_version:sources")
-    api ("$corda_release_group:corda-node:$corda_release_version")
-    api ( "org.testcontainers:junit-jupiter:$testcontainers_junit_jupiter_version")
-    api("com.github.manosbatsis.kotlin-utils:kotlin-utils-api:$kotlinutils_version")
-    api "io.github.juanchosaravia.autodsl:annotation:$autodsl_version"
+    compile ("$corda_release_group:corda-node:$corda_release_version")
+    compile ( "org.testcontainers:junit-jupiter:$testcontainers_junit_jupiter_version")
+    compile("com.github.manosbatsis.kotlin-utils:kotlin-utils-api:$kotlinutils_version")
+    compile "io.github.juanchosaravia.autodsl:annotation:$autodsl_version"
     kapt "io.github.juanchosaravia.autodsl:processor:$autodsl_version"
 
 }
