--- a/corda-testacles-testcontainers/build.gradle
+++ b/corda-testacles-testcontainers/build.gradle
@@ -1,4 +1,5 @@
 //apply plugin: 'java-library'
+apply plugin: 'org.jetbrains.dokka'
 
 dependencies {
     compile project(':corda-testacles-model-api')
@@ -6,9 +7,8 @@ dependencies {
 
     compile("com.github.manosbatsis.corda.rpc.poolboy:corda-rpc-poolboy:$poolboy_version")
     compile("org.junit.jupiter:junit-jupiter-api:$junit_jupiter_version")
-    compile("org.testcontainers:junit-jupiter:$testcontainers_junit_jupiter_version")
-
+    compile("org.testcontainers:junit-jupiter:$testcontainers_version")
+    implementation("org.testcontainers:postgresql:$testcontainers_version")
     implementation("$corda_release_group:corda-node:$corda_release_version")
-    //implementation("$corda_release_group:corda-node-driver:$corda_release_version")
 
 }
