--- a/corda-testacles-processor/build.gradle
+++ b/corda-testacles-processor/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'kotlin-kapt'
+apply plugin: 'org.jetbrains.dokka'
 
 // Define an extra sources
 def generatedSourcesDir = project.file("build/generated/source/kaptKotlin/main")
