--- a/corda-testacles-thirdparty-clone/build.gradle
+++ b/corda-testacles-thirdparty-clone/build.gradle
@@ -4,9 +4,11 @@ apply plugin: 'kotlin-allopen'
 apply plugin: 'kotlin-kapt'
 
 configurations {
+    dokkaRuntime
     cloneCorda { transitive = false }
     cloneTestcontainers { transitive = false }
 }
+
 dependencies {
 
     cloneCorda ("$corda_release_group:corda-node:$corda_release_version:sources")
@@ -16,7 +18,6 @@ dependencies {
     compile("com.github.manosbatsis.kotlin-utils:kotlin-utils-api:$kotlinutils_version")
     compile "io.github.juanchosaravia.autodsl:annotation:$autodsl_version"
     kapt "io.github.juanchosaravia.autodsl:processor:$autodsl_version"
-
 }
 
 /** Fetch NodeConfigurationImpl from Corda and clone it here as a base for our DSL */
