--- a/corda-testacles-cordapp-example/build.gradle
+++ b/corda-testacles-cordapp-example/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'net.corda.plugins.cordformation'
 apply plugin: 'net.corda.plugins.quasar-utils'
 
 project.afterEvaluate {
-    check.dependsOn(":deployNodes")
+    project.tasks.withType(Test).each {it.dependsOn(":deployNodes")}
 }
 
 cordapp {
-    targetPlatformVersion 4
-    minimumPlatformVersion 3
+    targetPlatformVersion 7
+    minimumPlatformVersion 7
     contract {
         name "Corbeans Yo! Cordapp contract"
         vendor "Manos Batsis"
