--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ services:
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
 cache:
   directories:
-    - "$HOME/.gradle/caches/"
-    - "$HOME/.gradle/wrapper/"
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
 
 before_install:
   - sudo rm /usr/local/bin/docker-compose
@@ -21,5 +21,5 @@ before_install:
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
 
-install: echo "skip 'gradle assemble' step"
-script: ./gradlew clean build -x dokka -x dokkaJavadoc
+install: skip
+script: ./gradlew clean nodedriverTest -x dokka -x dokkaJavadoc
