--- a/build.gradle
+++ b/build.gradle
@@ -239,7 +239,7 @@ subprojects {
             testLogging {
                 events "passed", "skipped", "failed", "standardOut", "standardError"
             }
-            include '**/containers/cordform/**/*Test.class'
+            include '**/containers/**/*Test.class'
         }
     }
     dependencies {
