--- a/corda-testacles-nodedriver/build.gradle
+++ b/corda-testacles-nodedriver/build.gradle
@@ -26,8 +26,8 @@ dependencies {
 
     compile("com.github.manosbatsis.corda.rpc.poolboy:corda-rpc-poolboy:$poolboy_version")
 
-    implementation("$corda_release_group:corda-node:$corda_release_version")
-    implementation("$corda_release_group:corda-node-driver:$corda_release_version")
+    compile("$corda_release_group:corda-node:$corda_release_version")
+    compile("$corda_release_group:corda-node-driver:$corda_release_version")
 
     compile("io.github.juanchosaravia.autodsl:annotation:$autodsl_version")
     kapt("io.github.juanchosaravia.autodsl:processor:$autodsl_version")
