--- a/corda-testacles-cordapp-example/build.gradle
+++ b/corda-testacles-cordapp-example/build.gradle
@@ -19,37 +19,7 @@ cordapp {
     }
 }
 
-configurations {
-    all {
-        resolutionStrategy{
-            eachDependency { DependencyResolveDetails details ->
-                // Force corda_release_version
-                def exclusions = ['corda-finance-contracts']
-                if (details.requested.group == "net.corda" && !exclusions.contains(details.requested.name)) {
-                    details.useTarget group: corda_release_group, name: details.requested.name, version: corda_release_version
-                }
-                // Force dependencies to use the same version of as Kotlin as we.
-                if (details.requested.group == "org.jetbrains.kotlin") {
-                    details.useTarget group: details.requested.group, name: details.requested.name, version: kotlin_version
-                }
-                // Force other versions
-                if (details.requested.group == "com.fasterxml.jackson.core") {
-                    details.useTarget group: details.requested.group, name: details.requested.name, version: jackson_version
-                }
-                if (details.requested.group == "com.fasterxml.jackson.dataformat") {
-                    details.useTarget group: details.requested.group, name: details.requested.name, version: jackson_version
-                }
-                if (details.requested.group == "com.fasterxml.jackson.datatype") {
-                    details.useTarget group: details.requested.group, name: details.requested.name, version: jackson_version
-                }
-                if (details.requested.group == "io.netty" && details.requested.name.startsWith("netty")
-                        && !details.requested.name.startsWith("netty-tcnative-boringssl-static")) {
-                    details.useTarget group: details.requested.group, name: details.requested.name, version: netty_version
-                }
-            }
-        }
-    }
-}
+
 
 dependencies {
     // Use Partiture for Corda flows etc.
@@ -83,7 +53,9 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-actuator:$spring_boot_version"){
         exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
     }
-    testImplementation("com.github.manosbatsis.corbeans:corbeans-spring-boot-starter:$corbeans_version")
+    testImplementation("com.github.manosbatsis.corbeans:corbeans-spring-boot-starter:$corbeans_version"){
+        exclude(group: "net.corda")
+    }
     testImplementation "org.springframework:spring-test:$spring_version"
     testImplementation("org.springframework.boot:spring-boot-starter-test:$spring_boot_version") {
         exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
